Fixed z-index stacking on header.

--- a/assets/elements.css
+++ b/assets/elements.css
@@ -14,7 +14,7 @@ a[href]:link, a[href]:visited { color: inherit; }
 
 article div.title, article div.location, article div.cost, article div.time { white-space: nowrap; }
 
-div.filter.controls { z-index: 1;}
+
 
 html, body > header, div.filter.controls div.position { background-image: url(images/background.png); }
 
@@ -43,7 +43,7 @@ section.post strong { font-family: "Artlist-Demi"; }
 
 /* Document Header */
 
-body > header { position: fixed; top: 0; left: 0; right: 0; z-index: 1; overflow: hidden; }
+body > header { position: fixed; top: 0; left: 0; right: 0; z-index: 2; overflow: hidden; }
 body > header h1 { border-bottom: 1px solid #999; }
 
 /* Info and Post buttons in the header */
@@ -67,6 +67,7 @@ svg[alt="Visual Art"] circle { fill: #357034; stroke: #357034; }
 
 /* Filter Controls */
 
+div.filter.controls { z-index: 1;}
 div.filter.controls div.categories { margin: 10px 20px; height: 90px; }
 div.filter.controls div.categories > * { width: 25%; height: 30px; }
 div.filter.controls div.categories label { position: absolute; display:block; text-indent: 15px; }
