--- a/assets/layout_for_pocket_size_screens.css
+++ b/assets/layout_for_pocket_size_screens.css
@@ -45,7 +45,7 @@
 
   div.list_container { padding-top: 124px; } div.filter.controls { height: 124px; }
 
-  div.filter.controls { left: 0; right: 0; z-index: 1; }
+  div.filter.controls { left: 0; right: 0; }
 
   /*body:not(.index) div.filter.controls { position: absolute; top: 0; }
   body.index       div.filter.controls { position: fixed; top: 44px; }*/
